# sppd-platform

./: .env.example  .gitignore  README.md  pyproject.toml
airflow/dags/: sppd_dag.py
config/: sppd_mc.toml  sppd_pt.toml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: bronze_load.sql
docker/: Dockerfile  docker-compose.yml
